Tableau link updated

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -23108,7 +23108,7 @@
     "3. Cancellation rates are highly correlated to ride assignment in the first 300 seconds.\n",
     "4. The region of inspection is the UK. \n",
     "5. Highest cancellation by clients is during the time of [0800, 2100, 2200, 2300] hours.\n",
-    "6. Additional Visualisation done on Tableau (Accesible At: https://public.tableau.com/app/profile/sharvil.d/viz/Gett-Taxi-Cancellations/TimeV_LocationsofCancelations?publish=yes)"
+    "6. Additional Visualisation done on Tableau (Accesible At: https://public.tableau.com/views/Gett-Taxi-Cancellations/TheGettTaxiCancellationFiasco?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link)"
    ]
   }
  ],
